# Quantra-L

./: .gitignore  .last_checkpoint  AI_SECURITY_MONITORING.md  CHECKPOINT_BACKUP.sh  COMPREHENSIVE_REVIEW.md  CONTEXT.md  Cargo.toml  HARDENING_COMPLETE.md  HARDENING_PLAN.md  IMPROVEMENT_ROADMAP.md  P2P_IMPLEMENTATION_COMPLETE.md  PROFILER_ARCHITECTURE.md  PROFILER_QUICKSTART.md  QUICK_FIXES.md  README.md  SECURITY_ASSESSMENT.md  ZEROTRUST_VM_COMPLETE.md  build.rs  failover_watchdog.sh
config/: default.toml
docs/: ESIM_SECURITY.md  HOW_ESIM_WORKS.md  SUPPORTED_CARRIERS.md
src/: main.rs
src/crypto/: keystore.rs  mod.rs
src/esim/: carriers.rs  mod.rs  profile.rs  provisioning.rs  qrcode_generator.rs  security.rs
src/p2p/: mod.rs  network.rs  peer.rs  protocol.rs  rate_limiter.rs
src/quant/: market_data.rs  mod.rs  portfolio.rs  pricing.rs  risk.rs
src/security/: anomaly.rs  bait_wallet.rs  behavioral.rs  emergency.rs  mirror_shield.rs  mod.rs  monitor.rs
src/zerotrust/: audit.rs  identity.rs  mod.rs  policy.rs  verification.rs  vm_sandbox.rs
